--- a/styles.css
+++ b/styles.css
@@ -906,20 +906,20 @@ body {
 }
 
 .concept-illustration img {
-    /* ZOOM ULTRA EXTREME de 300% */
-    width: 300%; 
-    height: 300%;
+    /* Taille normale sans zoom */
+    width: 100%; 
+    height: 100%;
     
     /* Centrage absolu */
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
     
     display: block;
     border-radius: var(--radius-xl);
     transition: transform var(--transition-smooth);
     
-    /* Compensation pour centrer le zoom x3 */
-    margin: -100%; 
+    /* Pas de marge négative */
+    margin: 0; 
 }
 
 .concept-block:hover .concept-illustration img {
@@ -2018,9 +2018,9 @@ body {
     }
     
     .concept-illustration img {
-        width: 250%;
-        height: 250%;
-        margin: -75%;
+        width: 100%;
+        height: 100%;
+        margin: 0;
     }
     
     /* Exam Section */
